--- a/src/main/resources/templates/sbu/jsf/show-edit-only.html
+++ b/src/main/resources/templates/sbu/jsf/show-edit-only.html
@@ -3,8 +3,9 @@
 <div th:fragment="bs5" class="card" th:insert="~{sbu/jsf/block :: scope(~{:: th:block})}">
   <th:block>
 
-    <div class="card-header">
-      <div class="d-flex justify-content-end">
+    <div class="card-header d-flex align-items-center">
+      <!-- Right-aligned icons -->
+      <div class="ms-auto d-flex align-items-center gap-2">
         <a th:if="${attachmentDialog and @sbuHtml.isAttachmentSnapshotProvider(item)}"
           hx:get="@{${item.joinPath('attachments')}(__${@webModelAttributes.AJAX_TARGET_ID_NAME}__=${@webModelAttributes.MODEL_CONTENT_TARGET_ID_VALUE})} + ${fowardingParam}"
           hx:target="${'#' + @webModelAttributes.MODEL_CONTENT_TARGET_ID_VALUE}" hx-ext="json-enc"
@@ -13,15 +14,28 @@
           class="pe-2 text-success hint--left">
           <i class="fas fa-paperclip"></i>
         </a>
-        <!-- Keep the header height even if the edit icon is hidden  -->
-        <i class="fa fa-fw" style="visibility: hidden;"></i>
-        <a href="#" th:onclick="printShadowDomToPdf([[${'showEditForm' + rid}]])">
-          <i class="fas fa-file-pdf"></i>
-        </a>
         <a th:if="${user == null || user.canUpdate(item)}" class="pe-2 orange"
           hx:get="@{${item.getEditPath(queryConfig)}(jsfTheme=${jsfTheme}, saveonly=${saveonly}, saveonlybtntxt=${saveonlybtntxt})} + ${fowardingParam}"
           hx:target="${'#' + ajaxTargetId}" hx-ext="json-enc">
-          <i class="fas fa-edit"></i></a>
+          <i class="fas fa-edit"></i>
+        </a>
+
+        <!-- More Options Dropdown -->
+        <div class="dropdown">
+          <a href="#" class="text-dark" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            <i class="fas fa-ellipsis-v"></i>
+          </a>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li>
+              <a class="dropdown-item" href="#"
+                th:onclick="|event.preventDefault(); printShadowDomToPdf('showEditForm${rid}');|">
+                <i class="fas fa-file-pdf me-2"></i>Export to PDF
+              </a>
+            </li>
+            <!-- Add more menu items here in the future -->
+          </ul>
+        </div>
       </div>
     </div>
     <div class="card-body">
