--- a/src/main/resources/templates/sbu/jsf/show-edit.html
+++ b/src/main/resources/templates/sbu/jsf/show-edit.html
@@ -3,18 +3,16 @@
 <div th:fragment="bs5" class="card" th:insert="~{sbu/jsf/block :: scope(~{:: th:block})}">
   <th:block>
 
-    <div class="card-header">
-      <div class="d-flex">
-        <button th:if="${historyBack}" onclick="history.back()" type="button"
-          class="me-auto btn-close" aria-label="Close"></button>
-        <button th:unless="${historyBack}"
-          hx:get="@{${!#strings.isEmpty(backPath) ? backPath : item.getBackPath(queryConfig)}(_)} + ${fowardingParam}"
-          hx:target="${'#' + backTargetId}" hx-ext="json-enc" type="button"
-          class="me-auto btn-close" aria-label="Close"></button>
+    <div class="card-header d-flex align-items-center">
+      <button th:if="${historyBack}" onclick="history.back()" type="button" class="btn-close"
+        aria-label="Close"></button>
+      <button th:unless="${historyBack}"
+        hx:get="@{${!#strings.isEmpty(backPath) ? backPath : item.getBackPath(queryConfig)}(_)} + ${fowardingParam}"
+        hx:target="${'#' + backTargetId}" hx-ext="json-enc" type="button" class="btn-close"
+        aria-label="Close"></button>
 
-        <a href="#" th:onclick="printShadowDomToPdf([[${'showEditForm' + rid}]])">
-          <i class="fas fa-file-pdf"></i>
-        </a>
+      <!-- Right-aligned icons -->
+      <div class="ms-auto d-flex align-items-center gap-2">
         <a th:if="${attachmentDialog and @sbuHtml.isAttachmentSnapshotProvider(item)}"
           hx:get="@{${item.joinPath('attachments')}(__${@webModelAttributes.AJAX_TARGET_ID_NAME}__=${@webModelAttributes.MODEL_CONTENT_TARGET_ID_VALUE})} + ${fowardingParam}"
           hx:target="${'#' + @webModelAttributes.MODEL_CONTENT_TARGET_ID_VALUE}" hx-ext="json-enc"
@@ -26,7 +24,25 @@
         <a th:if="${user == null || user.canUpdate(item)}" class="pe-2 orange"
           hx:get="@{${item.getEditPath(queryConfig)}(jsfTheme=${jsfTheme}, saveonly=${saveonly}, saveonlybtntxt=${saveonlybtntxt})} + ${fowardingParam}"
           hx:target="${'#' + ajaxTargetId}" hx-ext="json-enc">
-          <i class="fas fa-edit"></i></a>
+          <i class="fas fa-edit"></i>
+        </a>
+
+        <!-- More Options Dropdown -->
+        <div class="dropdown">
+          <a href="#" class="text-dark" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            <i class="fas fa-ellipsis-v"></i>
+          </a>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li>
+              <a class="dropdown-item" href="#"
+                th:onclick="|event.preventDefault(); printShadowDomToPdf('showEditForm${rid}');|">
+                <i class="fas fa-file-pdf me-2"></i>Export to PDF
+              </a>
+            </li>
+            <!-- Add more menu items here in the future -->
+          </ul>
+        </div>
       </div>
     </div>
     <div class="card-body">
