--- a/src/main/resources/templates/sbu/message-boards/notice-edit.html
+++ b/src/main/resources/templates/sbu/message-boards/notice-edit.html
@@ -39,6 +39,14 @@
 
           <div class="mb-3">
             <label for="title" class="form-label">
+              [[${#messages.msgOrNull('sbu.MessageBoardNotice.messageType') ?: 'Message Type'}]]
+            </label>
+            <input type="text" class="form-control" name="messageType"
+              th:value="${item.messageType}">
+          </div>
+
+          <div class="mb-3">
+            <label for="title" class="form-label">
               [[${#messages.msgOrNull('sbu.MessageBoardNotice.timelyDuration') ?: 'Timely
               Duration'}]]
             </label>
