--- a/src/main/resources/templates/sbu/fsm/content-editor.html
+++ b/src/main/resources/templates/sbu/fsm/content-editor.html
@@ -19,6 +19,8 @@
     <li class="nav-item" role="presentation">
       <button class="nav-link active" data-bs-toggle="tab"
         th:attr="data-bs-target=${'#mainForm' + fid}" type="button" role="tab">
+        <span
+          th:replace="~{sbu/fsm/required-mark :: bs5(${@sbuHtml.getSimpleName(item.phase.stateRecord.state.class)}, ${item.phase.stateRecord.state.name}, main)}"></span>
         [[${#messages.msgOrNull(@sbuHtml.getSimpleName(item.phase.stateRecord.state.class) + '.' +
         item.phase.stateRecord.state.name + '.tabs.main') ?:
         #messages.msgOrNull(@sbuHtml.getSimpleName(item.phase.stateRecord.state.class) +
@@ -30,6 +32,8 @@
       <button class="nav-link" data-bs-toggle="tab"
         th:attr="data-bs-target=${'#viewableForm' + fid + '_' + iter.index}" type="button"
         role="tab">
+        <span
+          th:replace="~{sbu/fsm/required-mark :: bs5(${@sbuHtml.getSimpleName(item.phase.stateRecord.state.class)}, ${item.phase.stateRecord.state.name}, ${formType})}"></span>
         [[${#messages.msgOrNull(@sbuHtml.getSimpleName(item.phase.stateRecord.state.class) + '.' +
         item.phase.stateRecord.state.name + '.tabs.' + formType) ?:
         #messages.msgOrNull(@sbuHtml.getSimpleName(item.phase.stateRecord.state.class) +
