--- a/src/main/resources/templates/sbu/sitemap/back-tracer.html
+++ b/src/main/resources/templates/sbu/sitemap/back-tracer.html
@@ -10,6 +10,9 @@
         </li>
         <li th:if="${idx.last}" class="breadcrumb-item active">
           <a>[[${contentNode.name}]]</a>
+          <a th:href="${contentNode.path}" target="_blank" class="ps-1">
+            <i class="fas fa-arrow-up-right-from-square"></i>
+          </a>
         </li>
       </th:block>
     </ol>
